  check to give friendly message if wxPython version is below the
  required version number.

Bugs fixed:
- A unittest.py bug that was fixed in Python 2.4 revealed a
  bug in test.py (1181714)
- When searching for a task that is completed, while the 
  'show completed' switch is off, the search shows the path to 
  the task (i.e. parent tasks), but not the matched task itself 
  (1182528).

Features added:
- In the task list and effort list the task column is automatically
  resized to take up the available space.
- Added columns to the task list view for: budget, total budget,
  budget left, and total budget left.
- Reorganized view menu, added extra task filters, added menu item to
  reset filters (1181762).


Release 0.30 - April 11, 2005

Bugs fixed:
- More than one task due today would crash Task Coach (1180641).



Release 0.29 - April 10, 2005

Bugs fixed:
- New effort in the context menu did not work in release 0.28 
  (1178562).
- When selecting 'View' -> 'Completed tasks' in the task tree, only
  completed root tasks were hidden (1179372).
  
Features added:
- What tab is active is now a persistent setting. This includes the tabs 
  and choices in the mainwindow and the effort choices in the task editor
  (1178779).
- Reordered 'View' -> 'Tasks due before end of' menu (1178880).
- Added a separate 'Budget' tab in the task editor.
- Taskbar icon now indicates whether task effort tracking is on (1178057).
- Effort is sorted from most recent to least recent (1179332).
- Changed task/subtask separator in the task list view from '|' to ' -> '
  (1179374).



Release 0.28 - April 6, 2005

Bugs fixed:
- Hitting return or double click to edit effort in the task editor 
  now works (1172164).
- Subtasks with the same name would only be visible once in the task tree
  view.

Features added:
- You can hide composite tasks in the task list view so that only leaf
  tasks are visible. Menu item 'View' -> 'Tasks with subtasks'. Requested 
  by Brian Crounse.


